--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ laion_clap==1.1.4
 librosa==0.10.2.post1
 lws==1.2.8
 mpi4py_mpich==3.1.2
+natsort==8.4.0
 nltk==3.8.1
 num2words==0.5.13
 numpy==1.23.5
